<resources>
    <string name="app_name">Woroud Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or">Or</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">cancel</string>
    <string name="save">Save</string>
    <string name="welcome_to_shoe_app">Welcome To Shoe App</string>

    <string name="long_text">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."</string>
    <string name="login_c">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="shoes">SHOES</string>
    <string name="add_new">ADD NEW</string>

</resources>