<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!-- I prefer to use the linear layout when the widgets are below each other in a simple vertical form-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        tools:context=".screens.login.LoginFragment">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/view_margin_top"
            android:src="@drawable/img1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailET"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_top"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordET"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/purple_500"
            android:text="@string/login" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_top"
            android:gravity="center"
            android:text="@string/or" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_top"
            android:background="@color/purple_500"
            android:onClick="gotoWelcomeScreen"
            android:text="@string/create_new_account" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>