<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.android.woroudshoestore.screens.login.LoginFragment"
        android:label="@string/login_c"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.android.woroudshoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.android.woroudshoestore.screens.instructions.InstructionsFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.example.android.woroudshoestore.screens.shoeList.ShoeListFragment"
        android:label="@string/shoes"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/detailsFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.android.woroudshoestore.screens.details.DetailsFragment"
        android:label="@string/add_new"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/detailsFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>