<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <!-- I prefer to use the linear layout when the widgets are below each other in a simple vertical form, and also to split the screen into two columns using the horizontal linear layout-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/name" />

            <TextView
                android:id="@+id/nameTV"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/company" />

            <TextView
                android:id="@+id/companyTV"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/size" />

            <TextView
                android:id="@+id/sizeTV"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/description" />

            <TextView
                android:id="@+id/descriptionTV"
                style="@style/title_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>